# qt-api-framework

./: .gitignore  README.md  pyproject.toml
config/: framework.json  plugins.json
examples/: plugins.json
examples/reference_plugin/: plugin.py
src/qt_api_framework/: __main__.py
src/qt_api_framework/core/: auth_flow.py  base_plugin.py  paths.py  plugin_loader.py  profile_manager.py  shell.py
src/qt_api_framework/network/: api_client.py
src/qt_api_framework/plugins/__template__/: __init__.py  plugin.py
tests/: dummy_plugin.py  mock_server.py  plugins_test.json  test_loader.py  test_step2.py  test_step3.py  test_v2.py
